Fix confirm offer popup "Quantity Uom" style issue on Firefox
Workitems:
#13408 UI issue-In the confirm offer pop, confirm quantity uom alignment is not proper in Firefox browser
git-tfs-id: [https://dev.azure.com/inatech]$/Shiptech10/Dev/Frontend;C19720

--- a/ShipTech10/app/css/custom.css
+++ b/ShipTech10/app/css/custom.css
@@ -4193,7 +4193,6 @@ Uncomment to see border around all .col-*
 .confirm_offer_dialog_confirmed_quantity span.input-group-addon{
     width: 20%;
     float: right;
-    height: 100%;
     line-height: 20px;
 }
 
